update home page

--- a/app/assets/scss/_fontScheme.scss
+++ b/app/assets/scss/_fontScheme.scss
@@ -1,6 +1,7 @@
 $fontSizePrimary: 25px;
 $fontSizeSecondary: 16px;
 $fontSizeSecondarySmall: 14px;
+$fontSizeSecondary12: 12px;
 
 $fontWeightPrimary: 600;
 $fontWeightSecondary: 500;
