--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -43,8 +43,7 @@
   .header-wrapper .calender-wrapper-top {
     justify-content: flex-end !important; }
     .header-wrapper .calender-wrapper-top .calender-icon {
-      padding-right: 15px;
-      margin: 0 -8px 0px 0; }
+      padding-right: 15px; }
       .header-wrapper .calender-wrapper-top .calender-icon i {
         font-size: 50px;
         color: #fff; }
@@ -90,6 +89,19 @@
   background: #033b6d; }
   .topmenu-wrapper .navbar {
     padding: 0px; }
+    .topmenu-wrapper .navbar .navbar-toggler {
+      margin: 2px;
+      border: 1px solid #ffffff;
+      position: relative;
+      width: 52px; }
+      .topmenu-wrapper .navbar .navbar-toggler::before {
+        position: absolute;
+        font-family: "Font Awesome 5 Free";
+        font-weight: 900;
+        content: "\f0c9";
+        border: unset;
+        color: #ffffff;
+        font-size: 30px; }
   .topmenu-wrapper .dropdown-menu {
     border-radius: 0px;
     border: none;
@@ -108,12 +120,17 @@
         margin-left: 1.255em;
         position: absolute;
         right: 12px;
-        top: 20px !important;
         transform: rotate(270deg); }
   .topmenu-wrapper .dropdown-menu-right {
     right: auto;
     left: auto;
     top: 100%; }
+    @media screen and (max-width: 991px) {
+      .topmenu-wrapper .dropdown-menu-right {
+        width: 100%;
+        padding: 0 0 0 15px; }
+        .topmenu-wrapper .dropdown-menu-right .nav-item:last-child {
+          border-bottom: unset; } }
     .topmenu-wrapper .dropdown-menu-right .nav-item a {
       padding: 0.5em !important; }
     .topmenu-wrapper .dropdown-menu-right .dropdown-menu-right {
@@ -123,7 +140,7 @@
   .topmenu-wrapper .nav-item a {
     color: #fff;
     font-size: 16px;
-    padding: 1em !important;
+    padding: 10px 25px 10px 15px !important;
     font-weight: 500; }
     .topmenu-wrapper .nav-item a:hover {
       background: #ff4e31; }
@@ -135,10 +152,14 @@
       margin-left: 1.255em;
       position: absolute;
       right: 12px;
-      top: 25px; }
+      font-family: "Font Awesome 5 Free";
+      font-weight: 900;
+      content: "\f078";
+      border: unset; }
 
 .notice-wrapper {
-  background: #ff4e31; }
+  background: #002749;
+  box-shadow: .8px .65px 3px #00000070; }
   .notice-wrapper .notice-title {
     background: #f23010;
     font-size: 16px;
@@ -371,13 +392,13 @@
     width: 100%;
     background: #033b6d; }
   .speech-wrapper .speech-slider-wrapper {
+    min-height: 340px;
     background: #fff; }
   .speech-wrapper .slider-content {
     padding: 25px; }
     .speech-wrapper .slider-content img {
       height: 210px;
       width: 180px;
-      border: 2px solid #ff4e31;
       border-radius: 5px;
       float: none; }
   .speech-wrapper .slider-indecator {
@@ -412,7 +433,6 @@
   .speech-wrapper p {
     font-size: 14px;
     color: #000;
-    margin-bottom: 20px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     text-align: justify;
@@ -436,6 +456,7 @@
       float: none; } }
 
 .usefull-links-wrapper {
+  min-height: 340px;
   background: #fff; }
   .usefull-links-wrapper .usefull-links-title {
     background: #ff4e31;
@@ -659,21 +680,47 @@
       color: #454545; }
 
 .login-form-wrapper {
-  cursor: pointer;
-  transition: all 0.5s; }
+  transition: all 0.5s;
+  box-shadow: 0px 3px 6px #00000020;
+  position: relative;
+  text-align: center; }
+  .login-form-wrapper::after {
+    position: absolute;
+    content: '';
+    height: 56px;
+    width: 20px;
+    background-color: #ff4e31;
+    bottom: -56px;
+    margin: 0px 0px 0 -9px; }
+  .login-form-wrapper.guardian::after {
+    content: unset; }
+    @media screen and (max-width: 767px) {
+      .login-form-wrapper.guardian::after {
+        content: ''; } }
+  @media screen and (max-width: 767px) {
+    .login-form-wrapper.teacher::before {
+      content: '';
+      left: 15%;
+      position: absolute;
+      height: 55px;
+      width: 20px;
+      background-color: #ff4e31;
+      bottom: -55px;
+      margin: 0px 0px 0 -9px; } }
+  @media screen and (max-width: 767px) {
+    .login-form-wrapper.teacher::after {
+      content: '';
+      right: 12%; } }
   .login-form-wrapper .login-image {
     text-align: center; }
     .login-form-wrapper .login-image img {
       width: 75% !important; }
-  .login-form-wrapper:hover {
-    background-color: #00000015;
-    box-shadow: 2px -2px 7px #00000040; }
-  .login-form-wrapper:hover .login-btn > button {
-    background: #fff;
-    color: #ff4e31; }
   .login-form-wrapper .login-btn {
-    padding: 32px 15px;
-    background: #ff4e31; }
+    padding: 20px 15px;
+    background: #ff4e31;
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: bold; }
     .login-form-wrapper .login-btn button {
       background: #033b6d;
       color: #fff;
@@ -684,6 +731,39 @@
       .login-form-wrapper .login-btn button:hover {
         background: #fff;
         color: #ff4e31; }
+  .login-form-wrapper.main {
+    box-shadow: unset;
+    display: flex;
+    justify-content: center; }
+    .login-form-wrapper.main::before {
+      position: absolute;
+      content: '';
+      height: 20px;
+      width: 68%;
+      background-color: #ff4e31;
+      top: -40px; }
+    .login-form-wrapper.main::after {
+      position: absolute;
+      content: '';
+      height: 76px;
+      width: 20px;
+      background-color: #ff4e31;
+      top: -76px; }
+    .login-form-wrapper.main .login-btn {
+      background: #033b6d;
+      width: 200px;
+      height: 80px;
+      border-radius: 10px;
+      position: relative; }
+      .login-form-wrapper.main .login-btn .btn {
+        width: 160px;
+        height: 40px;
+        padding: unset;
+        border-radius: 5px;
+        background: #ff4e31; }
+        .login-form-wrapper.main .login-btn .btn:hover {
+          background: #fff;
+          color: #ff4e31; }
 
 .admission-wrapper {
   padding: 30px;
@@ -1655,6 +1735,20 @@
       max-height: 210px;
       object-fit: cover; }
 
+.grid-list-wrapper.welcome-speech {
+  border: unset; }
+  .grid-list-wrapper.welcome-speech:hover {
+    box-shadow: unset; }
+  .grid-list-wrapper.welcome-speech .grid-image {
+    float: left;
+    margin-right: 30px;
+    margin-bottom: 20px;
+    width: 180px; }
+    .grid-list-wrapper.welcome-speech .grid-image img {
+      max-width: 180px;
+      max-height: 210px;
+      object-fit: cover; }
+
 /*.........Student LIST INSIDE END...........*/
 .custom-table .section-wise-attendance-table.center {
   text-align: center; }
@@ -2060,11 +2154,18 @@
   justify-content: center;
   align-items: center; }
 
-#welcome-speech, #institute-history {
+#welcome-speech {
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical; }
+
+#institute-history {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 9;
   -webkit-box-orient: vertical; }
 
 .read-more-less-button {
@@ -2301,10 +2402,10 @@
           .footer-wrapper .footer-main-wrapper .footer-widget-wrapper .footer-contact-form .form-group .form-control {
             background: #002749;
             border-color: #002749;
-            color: #033b6d;
+            color: #fff;
             font-size: 16px; }
             .footer-wrapper .footer-main-wrapper .footer-widget-wrapper .footer-contact-form .form-group .form-control::placeholder {
-              color: #033b6d; }
+              color: #b2bec8 0.25; }
         .footer-wrapper .footer-main-wrapper .footer-widget-wrapper .footer-contact-form button {
           background: #ff4e31;
           border-color: #ff4e31; }
@@ -2359,11 +2460,6 @@
 .all-notice-wrapper {
   padding-bottom: 0;
   background-color: #f2f2f2; }
-
-.notice-wrapper {
-  border: 1px solid #b2bec8; }
-  .notice-wrapper p {
-    font-size: 16px; }
 
 #scrollTopBtn {
   height: 56px;
@@ -2438,9 +2534,12 @@
   .modal-dialog {
     max-width: 900px; } }
 .typewrite {
-  color: #fff;
+  color: #FFA07D;
   font-weight: 500;
-  font-size: 14px; }
+  font-size: 12px;
+  letter-spacing: 0.5px; }
+  .typewrite:hover {
+    color: #FFA07D; }
 
 .react-datepicker-wrapper .react-datepicker__input-container:focus {
   outline: none; }
@@ -2546,6 +2645,6 @@
   justify-content: center;
   align-items: center;
   background-color: white;
-  height: 300px; }
+  height: 380px; }
 
 /*# sourceMappingURL=global.css.map */
