--- a/app/assets/scss/global.scss
+++ b/app/assets/scss/global.scss
@@ -38,9 +38,14 @@
 }
 
 .typewrite{
-    color: $colorWhite;
+    color: #FFA07D;
     font-weight: $fontWeightSecondary;
-    font-size: $fontSizeSecondarySmall;
+    font-size: $fontSizeSecondary12;
+    letter-spacing: 0.5px;
+
+    &:hover{
+        color: #FFA07D;
+    }
 }
 
 .react-datepicker-wrapper{
@@ -224,6 +229,6 @@
     justify-content: center;
     align-items: center;
     background-color: white;
-    height: 300px;
+    height: 380px;
 }
 
