--- a/app/assets/scss/header.scss
+++ b/app/assets/scss/header.scss
@@ -68,7 +68,7 @@
     .calender-icon {
       padding-right: 15px;
       //   margin: 0 5px 0px 0;
-      margin: 0 -8px 0px 0;
+      // margin: 0 -8px 0px 0;
 
       i {
         font-size: 50px;
