--- a/app/assets/scss/pageBodyContainer_kabir.scss
+++ b/app/assets/scss/pageBodyContainer_kabir.scss
@@ -908,6 +908,28 @@
     }
 }
 
+.grid-list-wrapper{
+    &.welcome-speech{
+        border: unset;
+
+        &:hover{
+            box-shadow: unset;
+        }
+        .grid-image{
+            float: left;
+            margin-right: 30px;
+            margin-bottom: 20px;
+            width: 180px;
+
+            img{
+                max-width: 180px;
+                max-height: 210px;
+                object-fit: cover;
+            }
+        }
+    }
+}
+
 /*.........Student LIST INSIDE END...........*/ 
 
 @include customTableSection("section-wise-attendance-table"); 
@@ -927,12 +949,21 @@
     }
 }
 
-#welcome-speech, #institute-history{
+#welcome-speech{
     // min-height: 150px;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+}
+
+#institute-history{
+    // min-height: 150px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 9;
     -webkit-box-orient: vertical;
 }
 
