--- a/app/assets/scss/global.scss
+++ b/app/assets/scss/global.scss
@@ -92,6 +92,8 @@
         }
 
         .carousel-inner{
+            max-height: 471px;
+            
             .carousel-item{
                 height: auto;
 
