--- a/app/assets/scss/contentPage.scss
+++ b/app/assets/scss/contentPage.scss
@@ -1075,7 +1075,7 @@
   }
 }
 .page-inner-title {
-  margin-bottom: 60px;
+  margin-bottom: 30px;
   h2 {
     font-size: $fontSizePrimary;
     font-weight: $fontWeightPrimary;
@@ -1201,9 +1201,13 @@
   margin-bottom: 20px;
   .grid-image {
     img {
-      height: 270px;
-      width: 270px;
+      // height: 270px;
+      // width: 270px;
       border-radius: 5px;
+      max-height: 270px;
+      max-width: 270px;
+      /* object-fit: cover; */
+      width: 100%;
     }
     .rounded {
       border-radius: 50% !important;
@@ -1221,6 +1225,13 @@
         font-size: $fontSizePrimary;
         font-weight: $fontWeightPrimary;
         color: $orangeColor;
+        display: block;
+        display: -webkit-box;
+        /* max-width: 200px; */
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     }
     .grid-subtitle-title {
