--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -907,7 +907,7 @@
     margin: 100px 0px; } }
 .sidebar-menu-wrapper {
   background: #002749;
-  padding: 100px 25px 60px;
+  padding: 40px 25px 40px;
   height: 100%; }
   .sidebar-menu-wrapper .sidebar-title h3 {
     font-size: 25px;
@@ -975,7 +975,8 @@
 .content-wrapper .book-list-wrapper .book-list > tr {
   border-bottom: 1px solid #f2f2f2;
   display: inline-flex;
-  align-items: flex-start; }
+  align-items: flex-start;
+  width: -webkit-fill-available; }
   .content-wrapper .book-list-wrapper .book-list > tr > td {
     padding-top: 30px;
     padding-bottom: 20px; }
@@ -983,7 +984,6 @@
   padding-right: 15px;
   padding-bottom: 35px;
   border-right: 1px solid #f2f2f2;
-  width: 185px;
   max-width: 185px; }
 .content-wrapper .book-list-wrapper .book-list .book-details {
   margin-left: 15px; }
@@ -1330,21 +1330,46 @@
   margin-top: 20px;
   padding: 50px;
   background-color: #f2f2f2; }
-  .dress-code-tab-wrapper .tab-panel-wrapper .page-inner-title {
-    margin-bottom: 30px; }
-    .dress-code-tab-wrapper .tab-panel-wrapper .page-inner-title h2 {
-      font-size: 25px;
-      font-weight: 600;
-      color: #ff4e31; }
-  .dress-code-tab-wrapper .tab-panel-wrapper .content p {
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.8; }
+  .dress-code-tab-wrapper .tab-panel-wrapper .dress-code-inside {
+    padding: 10px 0;
+    margin-bottom: 25px;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    overflow: hidden; }
+    .dress-code-tab-wrapper .tab-panel-wrapper .dress-code-inside .page-inner-title {
+      margin-bottom: 30px; }
+      .dress-code-tab-wrapper .tab-panel-wrapper .dress-code-inside .page-inner-title h2 {
+        font-size: 25px;
+        font-weight: 600;
+        color: #ff4e31; }
+    .dress-code-tab-wrapper .tab-panel-wrapper .dress-code-inside .content p {
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 1.8; }
+    .dress-code-tab-wrapper .tab-panel-wrapper .dress-code-inside .panel-image {
+      margin: -10px -6px;
+      overflow: hidden; }
+      .dress-code-tab-wrapper .tab-panel-wrapper .dress-code-inside .panel-image img {
+        height: 300px;
+        width: 100%;
+        max-width: 500px;
+        object-fit: cover;
+        margin: -5px; }
+
+.infrastructure-main .row:last-child div .custom-title-border-center {
+  margin-top: 80px;
+  margin-bottom: 10px; }
 
 .infrastructure-content-wrapper {
   padding: 50px;
   background: #f2f2f2;
   border-radius: 25px; }
+  .infrastructure-content-wrapper div .content {
+    height: 185px;
+    overflow-y: auto;
+    text-align: justify; }
+    .infrastructure-content-wrapper div .content .display-text-group .displayed-text .read-more-button .btn {
+      width: max-content; }
 
 .infrastructure-content-image {
   position: relative; }
@@ -1357,21 +1382,22 @@
       box-shadow: 2px 8px 21px 0px rgba(0, 0, 0, 0.5); }
   .infrastructure-content-image .attendance-body-header-inside {
     margin: 10; }
-  @media screen and (min-width: 992px) {
-    .infrastructure-content-image .attendance-body-header-inside {
-      margin: 0; }
-    .infrastructure-content-image img {
-      margin-top: 0px; }
+  @media screen and (min-width: 1200px) {
     .infrastructure-content-image::after {
       width: 199px;
       background: #f2f2f2;
       content: '';
       position: absolute;
       left: -100px;
-      top: -38px;
+      top: -23px;
       z-index: -1;
-      height: 375px;
+      height: 345px;
       border-radius: 25px; } }
+  @media screen and (min-width: 992px) {
+    .infrastructure-content-image .attendance-body-header-inside {
+      margin: 0; }
+    .infrastructure-content-image img {
+      margin-top: 0px; } }
 
 .find-pay-slip-info-wrapper {
   -webkit-box-shadow: 0px 4px 15px 3px rgba(189, 189, 189, 0.5);
@@ -2529,6 +2555,19 @@
 
 * {
   font-family: 'Montserrat', sans-serif; }
+
+*::-webkit-scrollbar, .nw-layout-content::-webkit-scrollbar {
+  width: 14px;
+  transition: all 1s; }
+
+*::-webkit-scrollbar-track, .nw-layout-content::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 14px 14px transparent;
+  border: solid 4px transparent; }
+
+*::-webkit-scrollbar-thumb, .nw-layout-content::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 14px 14px #ff9477;
+  border: solid 4px transparent;
+  border-radius: 14px; }
 
 @media (min-width: 1200px) {
   .container, .container-lg, .container-md, .container-sm, .container-xl {
