--- a/app/assets/scss/global.scss
+++ b/app/assets/scss/global.scss
@@ -25,6 +25,25 @@
 //     font-weight: $fontWeightSecondary;
 // }
 
+*::-webkit-scrollbar, .nw-layout-content::-webkit-scrollbar {
+    width: 14px;
+    transition: all 1s;
+}
+  
+  *::-webkit-scrollbar-track, .nw-layout-content::-webkit-scrollbar-track{
+    // box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 14px 14px transparent;
+    border: solid 4px transparent;
+}
+  
+  *::-webkit-scrollbar-thumb, .nw-layout-content::-webkit-scrollbar-thumb {
+    // background-color: #AEDBFF;
+    box-shadow: inset 0 0 14px 14px $orangeColor + 70;
+    border: solid 4px transparent;
+    border-radius: 14px
+  //   outline: 1px solid #ef5350;
+}
+
 @media (min-width: 1200px){
     .container, .container-lg, .container-md, .container-sm, .container-xl {
         max-width: 1300px;
