update style sheet

--- a/app/assets/scss/_colorScheme.scss
+++ b/app/assets/scss/_colorScheme.scss
@@ -10,7 +10,8 @@ $colorGreen: #007236;
 $blackColorCustom: #252525;
 $titleBorderColor:#e5e5e5;
 $darkTextColor:#454545;
-$tableHeaderTransparent: #ffedea;
+// $tableHeaderTransparent: #ffedea;
+$tableHeaderTransparent: $primaryColorLight;
 $colorPresent: #1dbc60;
 $colorAbsent: #ff0000;
 $colorDelayTime: #002749;
