--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -706,7 +706,7 @@
   .login-form-wrapper .login-image {
     text-align: center; }
     .login-form-wrapper .login-image img {
-      width: 75% !important; }
+      width: 60% !important; }
   .login-form-wrapper .login-btn {
     padding: 20px 15px;
     background: #ff4e31;
@@ -1251,25 +1251,27 @@
     content: attr(linkedin); }
 
 .custom-table .download-corner-table thead tr {
-  background: #ffedea;
+  background: #033b6d;
   border: none;
   border-bottom: 5px solid #fff; }
   .custom-table .download-corner-table thead tr th {
     border: none;
-    color: #000;
+    color: #fff;
     font-size: 16px;
     font-weight: 600; }
 .custom-table .download-corner-table tbody tr {
+  background: transparent;
   border-bottom: 2px solid #fff; }
   .custom-table .download-corner-table tbody tr:nth-of-type(odd) {
     background-color: rgba(0, 0, 0, 0.05); }
   .custom-table .download-corner-table tbody tr:nth-of-type(even) {
-    background-color: #ffedea; }
+    background-color: rgba(3, 59, 109, 0.1); }
   .custom-table .download-corner-table tbody tr td {
     border-top: none;
     color: #000;
     font-size: 14px;
-    font-weight: 500; }
+    font-weight: 500;
+    vertical-align: middle; }
 
 .explore-btn {
   background: #ff4e31 !important;
@@ -1403,13 +1405,12 @@
   -webkit-box-shadow: 0px 4px 15px 3px rgba(189, 189, 189, 0.5);
   -moz-box-shadow: 0px 4px 15px 3px rgba(189, 189, 189, 0.5);
   box-shadow: 0px 4px 15px 3px rgba(189, 189, 189, 0.5);
-  padding-top: 20px;
-  padding-bottom: 20px;
   margin-left: 0px !important;
-  margin-right: 0px !important; }
+  margin-right: 0px !important;
+  display: flex;
+  align-items: center; }
   .find-pay-slip-info-wrapper .student-info-table {
-    margin-left: 25px;
-    margin-top: 20px; }
+    margin: auto 0 auto 25px; }
     .find-pay-slip-info-wrapper .student-info-table .table {
       margin-bottom: 0px; }
       .find-pay-slip-info-wrapper .student-info-table .table tr {
@@ -1433,8 +1434,7 @@
     border-radius: 15px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-top: 20px; }
+    justify-content: center; }
     .find-pay-slip-info-wrapper .roll-no-box span {
       padding-bottom: 20px;
       display: block;
@@ -1459,7 +1459,7 @@
         color: #fff;
         font-weight: 600;
         margin-bottom: 0px;
-        font-size: 24px;
+        font-size: 16px;
         text-align: center; }
 .payslip-tab-wrapper .panel-border {
   border-top: 15px solid #ff4e31;
@@ -1997,7 +1997,7 @@
   box-shadow: 0 2px 20px 0px #ccc;
   margin: 0;
   align-items: center;
-  padding: 30px 0; }
+  overflow: hidden; }
   .attendance-body-header .attendance-body-header-inside .top-position {
     background-color: #f2f2f2;
     height: 152px;
@@ -2089,7 +2089,7 @@
   box-shadow: 0 2px 20px 0px #ccc;
   margin: 0;
   align-items: center;
-  padding: 30px 0; }
+  overflow: hidden; }
   .result-body-header .result-body-header-inside .top-position {
     background-color: #f2f2f2;
     height: 152px;
@@ -2213,16 +2213,26 @@
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
   color: #ff4e31;
-  position: relative; }
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+  .fees-info-main div.card-header span {
+    position: relative;
+    width: 25px;
+    height: 25px;
+    padding: 0 0 0 5px;
+    background-color: #fff;
+    text-align: center;
+    border-radius: 50%; }
+    .fees-info-main div.card-header span i.fas.fa-info.pr-2 {
+      font-size: 14px;
+      font-style: italic; }
 .fees-info-main td:nth-child(2) {
   padding-left: 30px; }
   .fees-info-main td:nth-child(2) span {
     font-weight: 700;
     color: #002749; }
-.fees-info-main i.fas.fa-info.pr-2 {
-  position: absolute;
-  right: 5px;
-  top: 17px; }
 .fees-info-main i.fas.fa-info.pr-2::before {
   background: #fff;
   border-radius: 70px;
@@ -2276,8 +2286,8 @@
     margin-bottom: 5px;
     text-decoration: none; }
     .seat-info-wrapper .seat-info-list .seat .number {
-      width: 100px;
-      height: 100px;
+      width: 110px;
+      height: 110px;
       border-radius: 50% !important;
       display: flex;
       flex-direction: column;
@@ -2285,15 +2295,15 @@
       align-items: center;
       background: #ff4e31;
       z-index: 100;
-      color: #fff; }
+      color: #fff;
+      font-size: 25px; }
       .seat-info-wrapper .seat-info-list .seat .number span {
-        font-weight: 700 !important;
-        font-size: 35px; }
+        font-weight: 700 !important; }
       .seat-info-wrapper .seat-info-list .seat .number p {
         font-size: 16px; }
     .seat-info-wrapper .seat-info-list .seat .seat-details {
       width: 300px;
-      padding: 10px 20px;
+      padding: 15px 40px;
       background: #f2f2f2;
       margin-left: -15px;
       flex-direction: column;
@@ -2513,17 +2523,19 @@
   width: 126px;
   height: 50px; }
 
-.dayPicker-custom-input {
-  background-color: #f2f2f2;
-  color: #818181;
-  border-radius: 0.25rem;
-  flex: 1 0 70%;
-  width: 100%;
-  height: calc(1.5em + 0.75rem + 2px);
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5; }
+.react-datepicker-wrapper {
+  width: 100%; }
+  .react-datepicker-wrapper .react-datepicker__input-container .dayPicker-custom-input {
+    background-color: #f2f2f2;
+    color: #818181;
+    border-radius: 0.25rem;
+    flex: 1 0 70%;
+    width: 100%;
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5; }
 
 .rbc-calendar .rbc-toolbar .rbc-btn-group button {
   font-size: 12px; }
@@ -2690,5 +2702,36 @@
   align-items: center;
   background-color: white;
   height: 380px; }
+
+.custom-tooltip:before {
+  content: '';
+  position: absolute;
+  top: 45px;
+  left: 8px;
+  background: #ff4e31;
+  padding: 5px 10px;
+  height: 20px;
+  width: 10px;
+  transform: rotate(45deg);
+  opacity: 0; }
+.custom-tooltip:after {
+  content: attr(details);
+  position: absolute;
+  top: 50px;
+  left: 0;
+  background: #ff4e31;
+  padding: 5px 10px;
+  border-radius: 5px;
+  opacity: 0;
+  min-width: 60px;
+  color: white; }
+
+.custom-tooltip:hover {
+  background-color: #ff4e31;
+  z-index: 1; }
+  .custom-tooltip:hover.custom-tooltip:before {
+    opacity: 1; }
+  .custom-tooltip:hover.custom-tooltip:after {
+    opacity: 1; }
 
 /*# sourceMappingURL=global.css.map */
