--- a/app/assets/scss/pageBodyContainer_kabir.scss
+++ b/app/assets/scss/pageBodyContainer_kabir.scss
@@ -263,7 +263,7 @@
             box-shadow: 0 2px 20px 0px #ccc;
             margin: 0;
             align-items: center;
-            overflow: hidden;
+            // overflow: hidden;
             // padding: 30px 0;
 
             .top-position{
