--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -2683,7 +2683,8 @@
       background: transparent;
       content: ''; }
     .image-section .image-section-inside img {
-      height: 100%; }
+      height: 100%;
+      object-fit: cover; }
     .image-section .image-section-inside:nth-child(1) {
       left: 0px;
       top: 0px;
