Completed Class Routine

--- a/app/assets/scss/_colorScheme.scss
+++ b/app/assets/scss/_colorScheme.scss
@@ -11,7 +11,7 @@ $blackColorCustom: #252525;
 $titleBorderColor:#e5e5e5;
 $darkTextColor:#454545;
 // $tableHeaderTransparent: #ffedea;
-$tableHeaderTransparent: $primaryColorLight;
+$tableHeaderTransparent: $primaryColorDark;
 $colorPresent: #1dbc60;
 $colorAbsent: #ff0000;
 $colorDelayTime: #002749;
