--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -1252,7 +1252,7 @@
     content: attr(linkedin); }
 
 .custom-table .download-corner-table thead tr {
-  background: #033b6d;
+  background: #002749;
   border: none;
   border-bottom: 5px solid #fff; }
   .custom-table .download-corner-table thead tr th {
@@ -1266,7 +1266,7 @@
   .custom-table .download-corner-table tbody tr:nth-of-type(odd) {
     background-color: rgba(0, 0, 0, 0.05); }
   .custom-table .download-corner-table tbody tr:nth-of-type(even) {
-    background-color: rgba(3, 59, 109, 0.1); }
+    background-color: rgba(0, 39, 73, 0.1); }
   .custom-table .download-corner-table tbody tr td {
     border-top: none;
     color: #000;
@@ -1489,6 +1489,18 @@
     padding: 10px; }
 .payslip-tab-wrapper .find-pay-slip-info-wrapper {
   box-shadow: none; }
+
+.font-12 {
+  font-size: 12px !important; }
+
+.font-14 {
+  font-size: 14px !important; }
+
+.font-16 {
+  font-size: 16px !important; }
+
+.font-18 {
+  font-size: 18px !important; }
 
 .font-20 {
   font-size: 20px !important; }
@@ -2205,6 +2217,80 @@
     font-weight: 600;
     color: #ff4e31 !important; }
 
+.custom-table .class-routine-table thead tr {
+  background: #002749;
+  color: #fff; }
+  .custom-table .class-routine-table thead tr th {
+    border: 1px solid #D5D5D5;
+    font-weight: 500;
+    letter-spacing: .25px;
+    text-align: center; }
+  .custom-table .class-routine-table thead tr:nth-child(1) {
+    text-align: left; }
+  .custom-table .class-routine-table thead tr:nth-child(2) {
+    background-color: white;
+    color: black !important;
+    font-size: 16px; }
+  .custom-table .class-routine-table thead tr:nth-child(3) {
+    font-size: 12px; }
+    .custom-table .class-routine-table thead tr:nth-child(3) th {
+      padding: 5px; }
+.custom-table .class-routine-table tbody tr {
+  background: transparent; }
+  .custom-table .class-routine-table tbody tr:nth-of-type(odd) {
+    background-color: rgba(0, 39, 73, 0.1); }
+  .custom-table .class-routine-table tbody tr td {
+    border: 1px solid #D5D5D5;
+    color: #000;
+    font-size: 12px;
+    font-weight: 500;
+    vertical-align: middle; }
+    .custom-table .class-routine-table tbody tr td:nth-child(1) {
+      font-weight: 600; }
+.custom-table .class-routine-table.online tbody tr td {
+  transition: all .3s ease-in-out;
+  border-top: none;
+  color: #000;
+  font-size: 14px;
+  font-weight: 500;
+  position: relative;
+  text-align: center; }
+  .custom-table .class-routine-table.online tbody tr td:nth-child(odd) {
+    background-color: #ffffff; }
+  .custom-table .class-routine-table.online tbody tr td:first-child {
+    background-color: #ffffff; }
+  .custom-table .class-routine-table.online tbody tr td:nth-child(2) {
+    background-color: rgba(0, 39, 73, 0.1);
+    text-align: left; }
+.custom-table .class-routine-table.exam thead {
+  border: 1px solid #D5D5D5; }
+  .custom-table .class-routine-table.exam thead tr {
+    background: #ff4e31;
+    color: #fff; }
+    .custom-table .class-routine-table.exam thead tr th {
+      border: unset;
+      font-weight: 500;
+      letter-spacing: .25px;
+      text-align: center;
+      vertical-align: middle; }
+      .custom-table .class-routine-table.exam thead tr th:nth-child(even) {
+        background-color: rgba(0, 39, 73, 0.05); }
+.custom-table .class-routine-table.exam tbody {
+  border: 1px solid #D5D5D5; }
+  .custom-table .class-routine-table.exam tbody tr {
+    background-color: white;
+    text-align: center;
+    vertical-align: middle; }
+    .custom-table .class-routine-table.exam tbody tr td {
+      border: unset;
+      border-bottom: 1px solid #D5D5D5;
+      padding: 15px;
+      font-weight: 400; }
+      .custom-table .class-routine-table.exam tbody tr td:nth-child(1) {
+        font-weight: 400; }
+      .custom-table .class-routine-table.exam tbody tr td:nth-child(even) {
+        background-color: rgba(0, 39, 73, 0.05); }
+
 .fees-info-main div.col-md-4 {
   padding-bottom: 30px; }
 .fees-info-main div.card-header {
@@ -2590,6 +2676,24 @@
   box-shadow: inset 0 0 14px 14px #ff4e31aa;
   border: solid 4px transparent;
   border-radius: 14px; }
+
+.no-box-shadow {
+  box-shadow: unset !important; }
+
+.bg-gray-light {
+  background-color: #F0F0F0 !important; }
+
+.bg-orange {
+  background-color: #f23010 !important; }
+
+.bg-primary-color-light {
+  background-color: #033b6d !important; }
+
+.bg-primary-color-dark {
+  background-color: #002749 !important; }
+
+.border-b-0 {
+  border-bottom: 0 !important; }
 
 @media (min-width: 1200px) {
   .container,
