--- a/app/assets/scss/pageBodyContainer_kabir.scss
+++ b/app/assets/scss/pageBodyContainer_kabir.scss
@@ -30,6 +30,13 @@
     color: red;
 }
 
+.link-decoration-none{
+    &:hover{
+        text-decoration: none;
+    }
+    
+}
+
 .vertical-border{
     background-color: #e5e5e5;
     height: 60px;
