--- a/app/assets/scss/sobhan.scss
+++ b/app/assets/scss/sobhan.scss
@@ -46,10 +46,10 @@
   height: 50px;
 }
 
-.react-datepicker-wrapper{
+.react-datepicker-wrapper {
   width: 100%;
-  
-  .react-datepicker__input-container{
+
+  .react-datepicker__input-container {
     .dayPicker-custom-input {
       background-color: #f2f2f2;
       color: #818181;
@@ -62,18 +62,14 @@
       font-weight: 400;
       line-height: 1.5;
 
-      &.group-btn{
-        
+      &.group-btn {
       }
 
-      .react-datepicker-wrapper{
-        
+      .react-datepicker-wrapper {
       }
     }
   }
-  
 }
-
 
 // #scrollTopBtn:hover {
 //   background-color: #555;
@@ -88,5 +84,194 @@
     margin-right: auto;
     border-style: none;
     display: block;
+  }
+}
+
+.m-t-28 {
+  margin-top: 28px;
+}
+
+.alumnus-member {
+  .alumnus-member-inside {
+    position: relative;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #e5e5e5;
+    margin-left: 135px;
+    display: flex;
+    justify-content: flex-start;
+    padding: 20px;
+    margin-bottom: 24px;
+
+    &:nth-child(2) {
+      flex-direction: row-reverse;
+      justify-content: flex-end;
+      margin-right: 135px;
+      margin-left: 0;
+
+      img {
+        margin-right: -135px;
+      }
+
+      .info-right {
+        // margin-left: 0;
+        margin-left: 30px;
+        margin-right: 30px;
+        width: 100%;
+
+        header {
+          margin-right: 150px;
+
+          .name {
+            font-size: 24px;
+            font-weight: bold;
+          }
+          .alumnus-job-details {
+            font-size: 18px;
+            font-weight: 300;
+          }
+        }
+      }
+    }
+
+    img {
+      // position: absolute;
+      border: 4px solid #ff4e31;
+      width: 273px;
+      height: 273px;
+      border-radius: 50%;
+      margin-left: -135px;
+    }
+
+    .info-right {
+      margin-left: 30px;
+      margin-right: 30px;
+      margin-top: 9px;
+      margin-bottom: 9px;
+      width: 100%;
+
+      header {
+        .name {
+          font-size: 24px;
+          font-weight: bold;
+        }
+        .alumnus-job-details {
+          font-size: 18px;
+          font-weight: 300;
+        }
+        .alumnus-details {
+          font-size: 24px;
+        }
+
+        // .grid-social {
+        //   ul li a {
+        //     height: 30px;
+        //     width: 30px;
+        //     text-align: center;
+        //     background-color: #033b6d;
+        //     border-radius: 5px;
+        //     margin-right: 5px;
+        //     padding: 10px 10px;
+        //     color: #fff;
+        //     position: relative;
+        //     text-decoration: none;
+        //   }
+        // }
+
+        .grid-social {
+          // margin-top: 15px;
+          ul {
+            li {
+              a {
+                height: 30px;
+                width: 30px;
+                text-align: center;
+                background-color: $primaryColorLight;
+                border-radius: 5px;
+                margin-right: 5px;
+                padding: 10px 10px;
+                color: $colorWhite;
+                position: relative;
+                text-decoration: none;
+              }
+              .phone,
+              .email,
+              .facebook,
+              .linkedin {
+                &:before {
+                  content: '';
+                  position: absolute;
+                  top: 45px;
+                  left: 8px;
+                  background: $orangeColor;
+                  padding: 5px 10px;
+                  height: 20px;
+                  width: 10px;
+                  transform: rotate(45deg);
+                  opacity: 0;
+                }
+                &:after {
+                  // content: attr(phone);
+                  position: absolute;
+                  top: 50px;
+                  left: 0;
+                  background: $orangeColor;
+                  padding: 5px 10px;
+                  border-radius: 5px;
+                  opacity: 0;
+                  min-width: 60px;
+                }
+              }
+              a:hover {
+                background-color: $orangeColor;
+                z-index: 1;
+
+                &.phone,
+                &.email,
+                &.facebook,
+                &.linkedin {
+                  &:before {
+                    opacity: 1;
+                  }
+                  &:after {
+                    opacity: 1;
+                  }
+                }
+              }
+            }
+          }
+        }
+
+        .grid-social {
+          ul {
+            li {
+              .phone {
+                &:after {
+                  content: attr(phone);
+                }
+              }
+
+              .email {
+                &:after {
+                  content: attr(email);
+                }
+              }
+
+              .facebook {
+                &:after {
+                  content: attr(facebook);
+                }
+              }
+
+              .linkedin {
+                &:after {
+                  content: attr(linkedin);
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
