pdf download in fail list, sectionwise result, and meritlist download updated

--- a/app/assets/scss/global.css
+++ b/app/assets/scss/global.css
@@ -2742,6 +2742,9 @@
     .alumnus-member .alumnus-member-inside .info-right header .grid-social ul li .linkedin:after {
       content: attr(linkedin); }
 
+.cursor-pointer {
+  cursor: pointer; }
+
 .rbc-calendar .rbc-toolbar .rbc-btn-group button {
   font-size: 12px; }
 .rbc-calendar .rbc-toolbar .rbc-toolbar-label {
